--- a/Test3.html
+++ b/Test3.html
@@ -202,7 +202,7 @@
                 }
             });
 
-            const scriptURL = 'YOUR_GOOGLE_APPS_SCRIPT_URL';
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbzDAljhwqKNoYvLF5JtAqRrF-tGrRLQxD6TvL8E9cx7I_liRpzwwYNSu2o5AXYhM4rk/exec';
 
             fetch(scriptURL, {
                 method: 'POST',
